
  4. Cache objects metadata in `PerformanceCachingGoogleCloudStorage` using GCS
     `ListObjects` requests.

  5. Change default values of properties:

       fs.gs.inputstream.min.range.request.size (default: 1048576 -> 524288)
       fs.gs.performance.cache.max.entry.age.ms (default: 3000 -> 5000)
       fs.gs.performance.cache.list.caching.enable (default: true -> false)


1.9.1 - 2018-07-11

  1. Fix `PerformanceCachingGoogleCloudStorage`.

  2. Send only 1 GCS metadata request per `GoogleCloudStorageReadChannel`
     object lifecycle to reduce number of GCS requests when reading objects.

  3. Always fail-fast when creating `GoogleCloudStorageReadChannel` instance for
     non-existing GCS object. Remove property that disables this:

       fs.gs.inputstream.fast.fail.on.not.found.enable

  4. For gzip-encoded objects always return `Long.MAX_VALUE` size in
     `GoogleCloudStorageReadChannel.size()` method, until object will be
     fully read. This fixes a bug, when clients that rely on `size` method
     could stop reading object prematurely.

  5. Implement fadvise feature that allows to read objects in random mode in
     addition to sequential mode (current behavior).

     In random mode connector will send bounded range requests (HTTP Range
     header) to GCS which are more efficient in some cases (e.g. reading objects
     in row-columnar file formats like ORC, Parquet, etc).

     Range request size is limited by whatever is greater, `fs.gs.io.buffer` or
     read buffer size passed by client.

     To avoid sending too small range requests (couple bytes) what could happen
     if `fs.gs.io.buffer` is 0 and client passes very small read buffer, min
     range request size is limited to 1 MiB by default. To override this limit
     and set minimum range request size to different value, use property:

       fs.gs.inputstream.min.range.request.size (default: 1048576)

     To enable fadvise random mode set property:
